refactor: EquipmentRoutineService custom exception 적용 (#107)